# interp_engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ccpp.yml  ccpp_mac.yml
include/: ie_string.h  interp_engine.h
src/: ie_string.c  interp_engine.c  main.c  tests.c
